--- a/src/app/catalog/page.module.scss
+++ b/src/app/catalog/page.module.scss
@@ -1,3 +1,10 @@
+@import '@/app/main';
+
+.catalogLayout {
+    width: 100%;
+}
+
 .wrapper {
-    background-color: grey;
+    width: 100%;
+    // background-color: grey;
 }
