--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -4,7 +4,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 0;
+    padding: 0 40px;
+    height: 60px;
+    border-bottom: 1px solid $lightGrey;
 }
 
 .logo {
@@ -13,11 +15,7 @@
     text-decoration: none;
 }
 
-// .side {
-//     display: flex;
-//     align-items: center;
-// }
-
-// .navigation {
-//     margin-right: 40px;
-// }
+.side {
+    display: flex;
+    align-items: center;
+}
