--- a/src/components/userIcon/styles.module.scss
+++ b/src/components/userIcon/styles.module.scss
@@ -5,17 +5,52 @@
 }
 
 .user {
-    height: 26px;
-    width: 26px;
-    overflow: hidden;
-    border-radius: 50%;
-    border: 1px solid $graphite;
+    display: flex;
+    align-items: center;
     cursor: pointer;
 }
 
+.imgWrapper {
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    border: .5px solid $someGrey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: box-shadow .3s;
+
+    &:hover {
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2)
+    }
+}
+
 .userImg {
-    height: 100%;
-    width: 100%;
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    border: .5px solid $someGrey;
+    
+}
+
+.sellerFirstLetter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    border: .5px solid $someGrey;
+    font-size: $littleFont;
+    font-weight: 700;
+    color: $grey;
+    cursor: pointer;
+    transition: box-shadow .3s;
+
+    &:hover {
+        // border: .5px solid black;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2)
+    }
 }
 
 .menu {
@@ -26,6 +61,7 @@
     margin-top: 15px;
     border-radius: $standartBorderRadius;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
 .menuItem {
@@ -42,4 +78,10 @@
     &:hover {
         background-color: $lightGrey;
     }
+}
+
+.name {
+    margin-left: 10px;
+    font-weight: 500;
+    user-select: none;
 }
