--- a/src/components/item/styles.module.scss
+++ b/src/components/item/styles.module.scss
@@ -58,12 +58,9 @@
     }
 }
 
-// .like {
-
-//     &:hover {
-//         width: 20px;
-//     }
-// }
+.like {
+    width: 16px;
+}
 
 .sellerAvatarWrapper {
     position: absolute;
