--- a/src/components/item/styles.module.scss
+++ b/src/components/item/styles.module.scss
@@ -170,9 +170,21 @@
     text-align: center;
     cursor: pointer;
     
-    &:hover {
-        &::before {
+    // &:hover {
+    //     &::before {
+    //         width: 100%;
+    //     }
+    // }
+
+    @media (hover: hover) and (pointer: fine) {
+        &:hover::before {
             width: 100%;
+        }
+    }
+
+    @media (hover: none) and (pointer: coarse) {
+        &::before {
+            width: 100px;
         }
     }
     
