--- a/src/components/item/styles.module.scss
+++ b/src/components/item/styles.module.scss
@@ -14,9 +14,11 @@
     border: 0.5px solid $someGrey;
     
     height: 100%;
-    
-    &:hover {
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4)
+
+    @media (hover: hover) and (pointer: fine) {
+        &:hover {
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4)
+        }
     }
 }
 
@@ -53,8 +55,14 @@
     cursor: pointer;
     transition: transform .3s;
 
-    &:hover {
-        transform: scale(120%);
+    // &:hover {
+    //     transform: scale(120%);
+    // }
+
+    @media (hover: hover) and (pointer: fine) {
+        &:hover {
+            transform: scale(120%);
+        }
     }
 }
 
